[package]
name = "ethnum"
version = "0.0.1"
edition = "2021"

[package.metadata.docs.rs]
features = ["macros", "serde"]

[workspace]
members = [
  "bench",
  "fuzz",
  "intrinsics",
  "macros",
]

[features]
llvm-intrinsics = ["ethnum-intrinsics"]
macros = ["ethnum-macros"]

[dependencies]
ethnum-intrinsics = { version = "=1.1.0", path = "intrinsics", optional = true }
ethnum-macros = { version = "=1.1.0", path = "macros", optional = true }
rayon = "1.6.1"
serde = { version = "1", default-features = false, optional = true }
